[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/backgroundselectitem1.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/backgroundselectitem2.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/checkbutton.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Items.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "BackgroundAnimation"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 614, 688 ), Vector2( 661, 113 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -2.18254, -2.18254, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 663, 719 ), Vector2( 670, 120 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 5.27694, 5.27694, 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 661, 113 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 670, 120 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="StyleBoxEmpty" id=3]

[node name="ItemsCanvasLayer" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BackgroundAnimation = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 661, 113 )
scale = Vector2( 0.972193, 0.972193 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 670, 120 )
scale = Vector2( 0.956366, 0.956366 )
texture = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -47.0
margin_bottom = -47.0
rect_clip_content = false
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer"]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/CenterContainer"]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/CenterContainer/MarginContainer"]
mouse_filter = 2
custom_constants/separation = 10
alignment = 1

[node name="AcceptButton" type="Button" parent="."]
margin_left = 570.0
margin_top = 421.0
margin_right = 1082.0
margin_bottom = 927.0
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/focus = SubResource( 3 )
icon = ExtResource( 3 )
flat = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="AcceptButton" to="." method="_on_AcceptButton_pressed"]
